[package]
name = "toml-spanned-value"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
#toml = { git = "https://github.com/alexcrichton/toml-rs" }
toml = { git = "https://github.com/est31/toml-rs", branch = "spanned_crate_mvp_1" }

[dev-dependencies]
serde_derive = "1.0"
