[package]
name = "toml-spanned-value"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/est31/toml-spanned-value"
description = "SpannedValue support for the toml crate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
linked-hash-map = { version = "0.5", optional = true }
#toml = { git = "https://github.com/alexcrichton/toml-rs" }
toml = { git = "https://github.com/est31/toml-rs", branch = "spanned_crate_mvp_3" }
#toml = { path = "../toml-rs" }

[dev-dependencies]
serde_derive = "1.0"

[features]
default = []
# Analogous to the preserve_order feature of toml-rs
preserve_order = ["linked-hash-map"]
